// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`_applyBestPattern > snapshot: best pattern result 1`] = `
{
  "grid": "███████ █ █ █ ███████
█     █  █ █  █     █
█ ███ █ █ █ █ █ ███ █
█ ███ █  █ █  █ ███ █
█ ███ █ █ █ █ █ ███ █
█     █  █ █  █     █
███████ █ █ █ ███████
         █ █         
█ █ █ █ █ █ █ █ █ █ █
 █ █ █ █ █ █ █ █ █ █ 
█ █ █ █ █ █ █ █ █ █ █
 █ █ █ █ █ █ █ █ █ █ 
█ █ █ █ █ █ █ █ █ █ █
         █ █ █ █ █ █ 
███████ █ █ █ █ █ █ █
█     █  █ █ █ █ █ █ 
█ ███ █ █ █ █ █ █ █ █
█ ███ █  █ █ █ █ █ █ 
█ ███ █ █ █ █ █ █ █ █
█     █  █ █ █ █ █ █ 
███████ █ █ █ █ █ █ █",
  "pattern": 0,
}
`;

exports[`_encodeData > snapshot: encoded data for Hello 1`] = `
[
  64,
  84,
  134,
  86,
  198,
  198,
  240,
  236,
  17,
  236,
  17,
  236,
  17,
  236,
  17,
  236,
  17,
  236,
  17,
  173,
  122,
  150,
  61,
  133,
  147,
  94,
]
`;

exports[`_encodeData > snapshot: encoded data for version 2 1`] = `
[
  64,
  181,
  70,
  87,
  55,
  70,
  150,
  230,
  114,
  3,
  19,
  35,
  48,
  236,
  17,
  236,
  17,
  236,
  17,
  236,
  17,
  236,
  17,
  236,
  17,
  236,
  17,
  236,
  17,
  236,
  17,
  236,
  17,
  236,
  225,
  178,
  159,
  63,
  65,
  145,
  81,
  189,
  36,
  147,
]
`;

exports[`_encodeFormatInfo > snapshot: all format info values 1`] = `
{
  "ECH_mask0": 5769,
  "ECH_mask1": 5054,
  "ECH_mask2": 7399,
  "ECH_mask3": 6608,
  "ECH_mask4": 1890,
  "ECH_mask5": 597,
  "ECH_mask6": 3340,
  "ECH_mask7": 2107,
  "ECL_mask0": 30660,
  "ECL_mask1": 29427,
  "ECL_mask2": 32170,
  "ECL_mask3": 30877,
  "ECL_mask4": 26159,
  "ECL_mask5": 25368,
  "ECL_mask6": 27713,
  "ECL_mask7": 26998,
  "ECM_mask0": 21522,
  "ECM_mask1": 20773,
  "ECM_mask2": 24188,
  "ECM_mask3": 23371,
  "ECM_mask4": 17913,
  "ECM_mask5": 16590,
  "ECM_mask6": 20375,
  "ECM_mask7": 19104,
  "ECQ_mask0": 13663,
  "ECQ_mask1": 12392,
  "ECQ_mask2": 16177,
  "ECQ_mask3": 14854,
  "ECQ_mask4": 9396,
  "ECQ_mask5": 8579,
  "ECQ_mask6": 11994,
  "ECQ_mask7": 11245,
}
`;

exports[`_encodeVersionInfo > snapshot: all version info values 1`] = `
{
  "v10": 42195,
  "v11": 48118,
  "v12": 51042,
  "v13": 55367,
  "v14": 58893,
  "v15": 63784,
  "v16": 68472,
  "v17": 70749,
  "v18": 76311,
  "v19": 79154,
  "v20": 84390,
  "v21": 87683,
  "v22": 92361,
  "v23": 96236,
  "v24": 102084,
  "v25": 102881,
  "v26": 110507,
  "v27": 110734,
  "v28": 117786,
  "v29": 119615,
  "v30": 126325,
  "v31": 127568,
  "v32": 133589,
  "v33": 136944,
  "v34": 141498,
  "v35": 145311,
  "v36": 150283,
  "v37": 152622,
  "v38": 158308,
  "v39": 161089,
  "v40": 167017,
  "v7": 31892,
  "v8": 34236,
  "v9": 39577,
}
`;

exports[`_makeSegments > snapshot: Hello segments 1`] = `
[
  64,
  84,
  134,
  86,
  198,
  198,
  240,
  236,
  17,
  236,
  17,
  236,
  17,
  236,
  17,
  236,
  17,
  236,
  17,
]
`;

exports[`_makeSegments > snapshot: longer data segments 1`] = `
[
  64,
  213,
  70,
  87,
  55,
  66,
  6,
  70,
  23,
  70,
  18,
  3,
  19,
  35,
  48,
  236,
  17,
  236,
  17,
  236,
  17,
  236,
  17,
  236,
  17,
  236,
  17,
  236,
  17,
  236,
  17,
  236,
  17,
  236,
]
`;

exports[`_reserveFormatInfo > snapshot: reserved format info areas 1`] = `
"        █            
        █            
        █            
        █            
        █            
        █            
        █            
        █            
█████████    ████████
                     
                     
                     
                     
        █            
        █            
        █            
        █            
        █            
        █            
        █            
        █            "
`;

exports[`_reserveVersionInfo > snapshot: reserved version info for v7 1`] = `
"                                  ███        
                                  ███        
                                  ███        
                                  ███        
                                  ███        
                                  ███        
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
██████                                       
██████                                       
██████                                       
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             "
`;

exports[`_writeAlignmentPatterns > snapshot: alignment patterns for v2 1`] = `
"                         
                         
                         
                         
                         
                         
                         
                         
                         
                         
                         
                         
                         
                         
                         
                         
                █████    
                █   █    
                █ █ █    
                █   █    
                █████    
                         
                         
                         
                         "
`;

exports[`_writeAlignmentPatterns > snapshot: alignment patterns for v7 1`] = `
"                                             
                                             
                                             
                                             
                    █████                    
                    █   █                    
                    █ █ █                    
                    █   █                    
                    █████                    
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
    █████           █████           █████    
    █   █           █   █           █   █    
    █ █ █           █ █ █           █ █ █    
    █   █           █   █           █   █    
    █████           █████           █████    
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                    █████           █████    
                    █   █           █   █    
                    █ █ █           █ █ █    
                    █   █           █   █    
                    █████           █████    
                                             
                                             
                                             
                                             "
`;

exports[`_writeData > snapshot: written data pattern 1`] = `
"              █ █ █ █
            █ █ █ █ █
            █ █ █ █ █
            █ █ █ █ █
            █ █ █ █ █
            █ █ █ █ █
            █ █ █ █ █
            █ █ █ █ █
            █ █ █ █ █
            █ █ █ █ █
            █ █ █ █ █
            █ █ █ █ █
            █ █ █ █ █
            █ █ █ █ █
            █ █ █ █ █
            █ █ █ █ █
            █ █ █ █ █
            █ █ █ █ █
            █ █ █ █ █
            █ █ █ █ █
            █ █ █ █ █"
`;

exports[`_writeFinderPatterns > snapshot: finder patterns for v1 1`] = `
"███████       ███████
█     █       █     █
█ ███ █       █ ███ █
█ ███ █       █ ███ █
█ ███ █       █ ███ █
█     █       █     █
███████       ███████
                     
                     
                     
                     
                     
                     
                     
███████              
█     █              
█ ███ █              
█ ███ █              
█ ███ █              
█     █              
███████              "
`;

exports[`_writeFinderPatterns > snapshot: finder patterns for v7 1`] = `
"███████                               ███████
█     █                               █     █
█ ███ █                               █ ███ █
█ ███ █                               █ ███ █
█ ███ █                               █ ███ █
█     █                               █     █
███████                               ███████
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
███████                                      
█     █                                      
█ ███ █                                      
█ ███ █                                      
█ ███ █                                      
█     █                                      
███████                                      "
`;

exports[`_writeFormatInfo > snapshot: format info H mask 5 1`] = `
"        █            
                     
        █            
                     
        █            
                     
                     
        █            
     █        █ █ █ █
                     
                     
                     
                     
        █            
                     
        █            
                     
                     
                     
                     
                     "
`;

exports[`_writeFormatInfo > snapshot: format info L mask 0 1`] = `
"                     
                     
        █            
                     
                     
                     
                     
        █            
███ ██ ██    ██   █  
                     
                     
                     
                     
        █            
        █            
        █            
        █            
                     
        █            
        █            
        █            "
`;

exports[`_writeTimingPatterns > snapshot: timing patterns for v1 1`] = `
"                     
                     
                     
                     
                     
                     
        █ █ █        
                     
      █              
                     
      █              
                     
      █              
                     
                     
                     
                     
                     
                     
                     
                     "
`;

exports[`_writeVersionInfo > snapshot: version info for v7 1`] = `
"                                    █        
                                   █         
                                   █         
                                   ██        
                                  ███        
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             
    █                                        
 ████                                        
█  ██                                        
                                             
                                             
                                             
                                             
                                             
                                             
                                             
                                             "
`;

exports[`_writeVersionInfo > snapshot: version info for v40 1`] = `
"                                                                                                                                                                      █          
                                                                                                                                                                      █ █        
                                                                                                                                                                      █          
                                                                                                                                                                       ██        
                                                                                                                                                                                 
                                                                                                                                                                      █ █        
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
███  █                                                                                                                                                                           
   █                                                                                                                                                                             
 █ █ █                                                                                                                                                                           
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 
                                                                                                                                                                                 "
`;

exports[`_xorPattern > snapshot: all mask patterns 1`] = `
"Pattern 0:
█ █ █ █ 
 █ █ █ █
█ █ █ █ 
 █ █ █ █
█ █ █ █ 
 █ █ █ █
█ █ █ █ 
 █ █ █ █

Pattern 1:
████████
        
████████
        
████████
        
████████
        

Pattern 2:
█  █  █ 
█  █  █ 
█  █  █ 
█  █  █ 
█  █  █ 
█  █  █ 
█  █  █ 
█  █  █ 

Pattern 3:
█  █  █ 
  █  █  
 █  █  █
█  █  █ 
  █  █  
 █  █  █
█  █  █ 
  █  █  

Pattern 4:
███   ██
███   ██
   ███  
   ███  
███   ██
███   ██
   ███  
   ███  

Pattern 5:
████████
█     █ 
█  █  █ 
█ █ █ █ 
█  █  █ 
█     █ 
████████
█     █ 

Pattern 6:
████████
███   ██
██ ██ ██
█ █ █ █ 
█ ██ ██ 
█   ███ 
████████
███   ██

Pattern 7:
█ █ █ █ 
   ███  
█   ███ 
 █ █ █ █
███   ██
 ███   █
█ █ █ █ 
   ███  "
`;

exports[`toQR > snapshot: Hello 1`] = `
"███████  █ ██ ███████
█     █  ███  █     █
█ ███ █ ██ ██ █ ███ █
█ ███ █  █ █  █ ███ █
█ ███ █   █ █ █ ███ █
█     █     █ █     █
███████ █ █ █ ███████
        ██ ██        
███ ████████ ██   █  
███      ██   █    ██
  █ █ ██    █   █████
█ ████  █ █   █    █ 
████  █ ███ █ █ █    
        █  █ █ █  ██ 
███████ ██ █ ███  ███
█     █ ██████ ██    
█ ███ █ █  █ ███   ██
█ ███ █  ██   ██  ██ 
█ ███ █ ███ █   █ █ █
█     █ █     █ █  █ 
███████ █   █ ██   ██"
`;

exports[`toQR > snapshot: URL 1`] = `
"███████    ██ █   ███████
█     █  ██  ██ █ █     █
█ ███ █     █ █   █ ███ █
█ ███ █ █   ██  █ █ ███ █
█ ███ █ ██   █  █ █ ███ █
█     █    ██ █   █     █
███████ █ █ █ █ █ ███████
          ██  ███        
██   ███ █ █        ██   
█   █  ███  ██████ █████ 
█ ██  █ █ █  ████  █ █ ██
 ██  █   █  ██  █ ██ █  █
███  █████ ███ ██ ██    █
██     ██      ██  █   █ 
█  █████  ███  █  ████ ██
█ ███  █   █     ███ ██ █
█   █████ ██    █████ █  
        █   ███ █   █    
███████ █  █    █ █ █   █
█     █ ███ ██ ██   █  █ 
█ ███ █  ██ █ ███████ █ █
█ ███ █   █   █ ███    ██
█ ███ █  █ ██  █     ██ █
█     █ ██ █  ████ ██   █
███████ █ █  ██ █ █  █  █"
`;

exports[`toQR > snapshot: numeric 1`] = `
"███████ ██  █ ███████
█     █  █  █ █     █
█ ███ █ █ █ █ █ ███ █
█ ███ █ █  █  █ ███ █
█ ███ █ ███   █ ███ █
█     █       █     █
███████ █ █ █ ███████
         ██          
████  █ █ █  █  ███ █
 █ ███  ██  █ █ █ ███
█ ███ ██  █ █ █  ██ █
█ █ ██ ██   ██ █     
  ███ ████ █ ██  █   
        █      ███ █ 
███████  ██     ████ 
█     █  ████  ██ █ █
█ ███ █  █ █ █ █  █  
█ ███ █ ███  █ █ █ █ 
█ ███ █ ██ █   █  █  
█     █ █  ██ ██ █  █
███████ █  ███ ████  "
`;
